UPDATE: No gap between collapsible lists. UPDATE: Uses '#' for numbers in the divider. FIXED: Copies the current lib overrides when building resources. MODIFIED: Min android version (7 -> 8).

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -80,9 +80,9 @@ body {
     -webkit-box-shadow: none;
 }
 
-.ui-content .ui-listview-inset
-{
-	margin: 0.25em 0;
+.ui-collapsible-inset,
+.ui-collapsible-set {
+    margin: 0px 0px;
 }
 
 /* HELPERS */
